// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applySmoothTransition > 中央付近の単一ジャンプに対して、滑らかな遷移が適用される 1`] = `
[
  0,
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6238425925925927,
  0.84375,
  0.9803240740740741,
  1,
  1,
]
`;

exports[`applySmoothTransition > 先頭近くのジャンプでは、遷移がデータの端に合わせて切り詰められる 1`] = `
[
  0.04296875,
  0.31640625,
  0.68359375,
  0.95703125,
  1,
]
`;

exports[`applySmoothTransition > 十分に離れた複数のジャンプに対して、それぞれ独立に遷移が適用される 1`] = `
[
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6238425925925927,
  0.84375,
  0.9803240740740741,
  1.0196759259259258,
  1.15625,
  1.3761574074074074,
  1.6238425925925926,
  1.84375,
  1.980324074074074,
  2,
]
`;

exports[`applySmoothTransition > 各ジャンプで異なる遷移長を指定できる 1`] = `
[
  0,
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6238425925925927,
  0.8634259259259259,
  1.136574074074074,
  1.3761574074074074,
  1.6238425925925926,
  1.84375,
  1.980324074074074,
  2,
  2,
]
`;

exports[`applySmoothTransition > 左右で異なる遷移長を指定できる 1`] = `
[
  0,
  0,
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6238425925925927,
  0.84375,
  0.9803240740740741,
  1,
]
`;

exports[`applySmoothTransition > 末尾近くのジャンプでは、遷移がデータの端に合わせて切り詰められる 1`] = `
[
  0,
  0.04296875,
  0.31640625,
  0.68359375,
  0.95703125,
]
`;

exports[`applySmoothTransition > 浮動小数点数のデータに対しても正常に動作する 1`] = `
[
  0.5,
  0.5515625,
  0.8796875,
  1.3203125,
  1.6484375,
  1.7,
]
`;

exports[`applySmoothTransition > 片方の遷移長が0でも正常に動作する（右側のみ） 1`] = `
[
  0,
  0,
  0,
  0.07407407407407407,
  0.5,
  0.925925925925926,
  1,
]
`;

exports[`applySmoothTransition > 片方の遷移長が0でも正常に動作する（左側のみ） 1`] = `
[
  0.07407407407407407,
  0.5,
  0.925925925925926,
  1,
  1,
  1,
  1,
]
`;

exports[`applySmoothTransition > 負のジャンプ（下降）にも対応する 1`] = `
[
  1,
  0.9803240740740741,
  0.84375,
  0.6238425925925926,
  0.37615740740740733,
  0.15625,
  0.01967592592592593,
  0,
]
`;

exports[`applySmoothTransition > 遷移長が配列ではなくオブジェクトで渡された場合、すべてのジャンプに同じ遷移長が適用される 1`] = `
[
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6238425925925927,
  0.84375,
  0.9803240740740741,
  1.0196759259259258,
  1.15625,
  1.3761574074074074,
  1.6238425925925926,
  1.84375,
  1.980324074074074,
  2,
]
`;

exports[`applySmoothTransition > 隣接するジャンプの距離が遷移長より短い場合、遷移長が距離に応じて自動的に縮小される 1`] = `
[
  0.04296875,
  0.31640625,
  0.68359375,
  1.0018463134765625,
  1.2870330810546875,
  1.6699981689453125,
  1.9551849365234375,
  2,
  2,
]
`;

exports[`applySmoothTransition > 隣接するジャンプの遷移区間が重なる場合、重複して適用される 1`] = `
[
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6439056605795611,
  1.003074363425926,
  1.363882726766118,
  1.6164413473079562,
  1.840675636574074,
  1.9799369320130316,
]
`;
